log
Thu Mar 26 07:01:12 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
20c6062
Thu Mar 26 07:17:36 PM UTC 2026: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:93:33: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   93 |     if(list -> current == NULL) return;
      |                                 ^~~~~~
list.c:92:8: note: declared here
   92 | void * popCurrent(List * list) {
      |        ^~~~~~~~~~
list.c:95:6: error: expected expression before ‘Node’
   95 |     *Node izq = list -> current -> prev;
      |      ^~~~
list.c:96:6: error: expected expression before ‘Node’
   96 |     *Node der = list -> current -> next;
      |      ^~~~
list.c:98:5: error: ‘izq’ undeclared (first use in this function)
   98 |     izq -> next = der;
      |     ^~~
list.c:98:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:98:19: error: ‘der’ undeclared (first use in this function)
   98 |     izq -> next = der;
      |                   ^~~
5dfa257
Thu Mar 26 07:19:20 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:93:33: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   93 |     if(list -> current == NULL) return;
      |                                 ^~~~~~
list.c:92:8: note: declared here
   92 | void * popCurrent(List * list) {
      |        ^~~~~~~~~~
d6ef5e6
Thu Mar 26 07:20:23 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7a38f20
